<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data_anos" />

    <TextView
        android:id="@+id/dataAniv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_text"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prox_data"/>

        <TextView
            android:id="@+id/diasFaltantes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#770404"
            android:text="@string/new_text2"
            android:textSize="15sp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dias"/>


    </LinearLayout>

</LinearLayout>